--- a/src/screens/header/Header.css
+++ b/src/screens/header/Header.css
@@ -1,6 +1,56 @@
-.app-header {
+.inner-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+  height: 35px;
+  padding: 10px;
   background-color: #263238;
-  height: 70px;
 }
 
+/** Search **/
+.search-container {
+ height: 30px;
+ align-self: center;
+}
 
+.search-container input {
+  width: 300px !important;
+}
+
+/** To remove cross icon **/
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+/** Left Logo **/
+.logo {
+  align-self: center;
+  padding-left: 20px;
+  height: 40px;
+}
+
+/** Login and profile box **/
+.login-button {
+  align-self: center;
+  margin-right: 20px !important;
+}
+
+/* Smaller devices */
+@media screen and (max-width:600px) {
+  .inner-container {
+    flex-direction: column;
+    height: 140px;
+    justify-content: space-between;
+  }
+  .search-container, .login-button {
+    align-self: flex-start;
+  }
+
+  .logo {
+    align-self: flex-start;
+    margin-left: -5px;
+  } 
+}
