--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -192,3 +192,93 @@
 .checkout-btn {
     width: 100%
 }
+
+/* media query for mobile devices */
+@media only screen and (min-width: 150px) and (max-width: 480px) {
+    .main-container-body {
+        width: 100%
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin: 0px;
+    }
+    .restaurant-details {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 4px 2px;
+        height: auto;
+    }
+    .image-container {
+        width: 80%;
+        padding: 5px 2px;
+    }
+    .details-container {
+        width: 70%;
+        text-align: center;
+    }
+    .items-list {
+        flex: 100%;
+        width: 80%;
+        font-size: 15px;
+        margin: 10px;
+        padding: 5px;
+    }
+    .item {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 10px;
+        width: 100%;
+    }
+    .item-left {
+        flex: 50%;
+        width: 100%;
+    }
+    .removeIcon-cart {
+        padding: 2px;
+    }
+    .addIcon {
+        padding-right: 0px;
+    }
+    .item-right {
+        flex: 50%;
+        width: 100%;
+    }
+    .cart-container {
+        flex: 100%;
+        width: 300px;
+        padding: 10px 5px;
+    }
+    .add-remove-icon {
+        flex: 30%;
+    }
+    .cart-item-centre {
+        flex: 30%;
+        font-weight: bolder;
+        padding: 0 0;
+    }
+    .cart-item-right {
+        flex: 30%;
+    }
+    .item-name {
+        padding-left: 2px;
+    }
+    .cart-item {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: space-between;
+    }
+    .addIcon-cart {
+        padding: 2px;
+    }
+    .cart-item-left {
+        flex: 40%;
+        flex-wrap: wrap;
+    }
+}
