--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -282,3 +282,41 @@
         flex-wrap: wrap;
     }
 }
+
+/* Tablet device media query */
+@media (min-width: 200px) and (max-width: 1000px) {
+    .main-container-body {
+        width: 100%
+    }
+    .details-container {
+        width: 60%;
+        text-align: center;
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    .items-list {
+        flex: 100%;
+        width: 70%;
+    }
+    .cart-container {
+        flex: 100%;
+        padding-left: 15px;
+        width: 450px;
+    }
+    .restaurant-details {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 400px;
+        align-items: center;
+        padding: 15px 5px;
+    }
+    .image-container {
+        width: 70%;
+        padding: 5px 2px;
+    }
+}
