--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,5 +1,16 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-left: 5px;
+  }
 }
