--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -12,8 +12,8 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     padding: 0px;
-    margin: 0px;
-    margin-left: 5px;
+    width: 80%;
+    padding-left: 5px;
   }
 }
 
