--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -1,6 +1,7 @@
 .main {
     flex-direction: column;
     display: flex;
+    margin-bottom: 100px;
 }
 
 .restaurant-details {
@@ -67,17 +68,13 @@
 .items-list {
     width: 40%;
     padding-left: 50px;
-    padding-top: 25px;
+    padding-top: 5px;
     flex: 60%;
 }
 
 .details-container {
     flex: 75%;
-    padding-left: 20px;
-}
-
-.category {
-    padding-top: 20px;
+    padding-left: 50px;
 }
 
 .item {
@@ -120,10 +117,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    flex: 30%
+    flex: 30%;
+    justify-content: flex-start;
 }
-
 
 .add-icon-plus-button {
     display: flex;
@@ -135,10 +131,10 @@
 }
 
 .cart-container {
-    padding-left: 150px;
+    padding-left: 100px;
     padding-top: 25px;
     height: auto;
-    width: 50%;
+    width: 65%;
 }
 
 .cart-item {
@@ -196,6 +192,17 @@
     width: 100%
 }
 
+.minus {
+    display: flex;
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+}
+
+.category {
+    padding-top: 20px;
+}
+
 /*Tablet Query*/
 
 @media (min-width: 200px) and (max-width: 1000px) {
@@ -219,7 +226,6 @@
     .cart-container {
         flex: 100%;
         padding-left: 15px;
-        width: 450px;
     }
     .restaurant-details {
         width: 100%;
@@ -280,9 +286,6 @@
         flex: 50%;
         width: 100%;
     }
-    .minus{
-        display: flex;
-    }
     .removeIcon-cart {
         padding: 2px;
     }
@@ -295,12 +298,14 @@
     }
     .cart-container {
         flex: 100%;
-        width: 300px;
-        padding: 10px 5px;
+        width: 82%;
+        padding: 10px 0px 0px 0px;
     }
     .add-remove-icon {
         flex: 30%;
         flex-direction: column;
+        float: left;
+        padding-left: 5px;
     }
     .cart-item-centre {
         flex: 30%;
@@ -325,5 +330,8 @@
     .cart-item-left {
         flex: 40%;
         flex-wrap: wrap;
+    }
+    .plus {
+        margin-left: -10px;
     }
 }
