--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,19 +1,15 @@
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: flex-start;
-  padding-left: 20px;
   padding-top: 10px;
 }
 
 @media screen and (max-width: 600px) {
   .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0px;
-    width: 80%;
-    padding-left: 5px;
+    width: 100%;
   }
 }
 
