--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: center;
   padding-top: 10px;
 }
 
