--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -218,45 +218,10 @@
   padding-top: 20px;
 }
 
-/*Tablet Query*/
 
-@media (min-width: 200px) and (max-width: 1000px) {
-  .main-container-body {
-    width: 100%;
-  }
-  .details-container {
-    width: 60%;
-    text-align: center;
-  }
-  .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-  .items-list {
-    flex: 100%;
-    width: 70%;
-  }
-  .cart-container {
-    flex: 100%;
-    padding-left: 15px;
-  }
-  .restaurant-details {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    align-items: center;
-    padding: 15px 5px;
-  }
-  .image-container {
-    width: 70%;
-    padding: 5px 2px;
-  }
-}
-
-@media only screen and (min-width: 150px) and (max-width: 480px) {
+/* Extra small devices (phones, 600px and down) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px), (max-width: 768px) {
   .main-container-body {
     width: 100%;
   }
@@ -346,6 +311,6 @@
     flex-wrap: wrap;
   }
   .plus {
-    margin-left: -10px;
+    margin-left: auto;
   }
 }
