css fixs t home page

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -13,6 +13,11 @@
     padding: 0px;
     width: 100%;
   }
+
+  .MuiGridListTile-tile {
+    display: flex !important;
+    justify-content: center !important;
+  }
 }
 
 .no-restaurant {
